--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4cc1f9; }
+  background: #a3220f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6799e3; }
+  background: #b4afdf; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #32437a; }
+  background: #60d31e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #615a80; }
+  background: #0b7a94; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #962b69; }
+  background: #7dd3d9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b3404d; }
+  background: #414b7b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a5f474; }
+  background: #c611df; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #59e45d; }
+  background: #87c57c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e2beab; }
+  background: #cdd21d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fea016; }
+  background: #e2f6f3; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9a5526; }
+  background: #f5591d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #968638; }
+  background: #9a1eed; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #307bb2; }
+  background: #e58575; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a24a77; }
+  background: #7eef4b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #514ff3; }
+  background: #f940c5; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c5d5d1; }
+  background: #f72efa; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d10426; }
+  background: #95ffb1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a950e2; }
+  background: #d9624a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ca32be; }
+  background: #576b10; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #df74a0; }
+  background: #274cb4; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #db6a98; }
+  background: #23f651; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ffa09f; }
+  background: #9037bb; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #55c45d; }
+  background: #a55d01; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2b4dbc; }
+  background: #69185f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #709299; }
+  background: #e47255; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ce9d2e; }
+  background: #e6633b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c4ca28; }
+  background: #205844; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #46f3ad; }
+  background: #1c31eb; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #270ce3; }
+  background: #673a78; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #965b37; }
+  background: #9c15cf; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7f7a5d; }
+  background: #86f0d3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #9fc4e2; }
+  background: #a7d876; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c36dc1; }
+  background: #53aca8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6a4a4e; }
+  background: #bddbe8; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #703cc1; }
+  background: #8ad028; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e791ae; }
+  background: #625c17; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5471c6; }
+  background: #24b761; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9c3c15; }
+  background: #56a223; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a8bc2f; }
+  background: #349a65; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b37ec2; }
+  background: #014f68; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #09c0e3; }
+  background: #9c8cd8; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b82d82; }
+  background: #0f2ee0; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b5822b; }
+  background: #a52209; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7de144; }
+  background: #ee6146; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8592e7; }
+  background: #396f9c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ef23cc; }
+  background: #97e642; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #30b9cd; }
+  background: #d9b63a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a7adce; }
+  background: #341bcf; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #569478; }
+  background: #6a8989; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #86dad9; }
+  background: #a608fa; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #177a66; }
+  background: #5ff440; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #28bbb1; }
+  background: #702350; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #515e10; }
+  background: #f6bf42; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #4a51d1; }
+  background: #11c561; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ebc49e; }
+  background: #ab2d78; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4d504a; }
+  background: #aed873; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1778d6; }
+  background: #39b6dd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a91b90; }
+  background: #d7c2bb; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #51cfb4; }
+  background: #0403fb; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d01c0f; }
+  background: #d7613f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #dfdbdf; }
+  background: #c19404; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c05996; }
+  background: #b6febb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #150f9c; }
+  background: #1ece58; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #12333c; }
+  background: #b6c978; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #9337e9; }
+  background: #b9e49f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #803282; }
+  background: #29cccd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #11c72a; }
+  background: #c09628; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3016e7; }
+  background: #3f92f6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #60950f; }
+  background: #72522a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d88760; }
+  background: #7246ec; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #35b41b; }
+  background: #8dfb61; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #dd01de; }
+  background: #11058a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0747b2; }
+  background: #e532df; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #428ace; }
+  background: #ea8291; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b5d270; }
+  background: #b397ab; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6bbbed; }
+  background: #10077e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #92adf4; }
+  background: #4d7c3e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fe5fca; }
+  background: #09424e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #cd6d5b; }
+  background: #d311d5; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d4cfa5; }
+  background: #8c214a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #25bc40; }
+  background: #1a6cd6; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c7ba3e; }
+  background: #b1718d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #31e531; }
+  background: #603dbf; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c5ce82; }
+  background: #c7efe8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #317336; }
+  background: #d0ea81; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ce99cb; }
+  background: #a1ea9a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #39aa3b; }
+  background: #03b488; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #01fcc4; }
+  background: #9491e8; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8f59ee; }
+  background: #a24e52; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2283cd; }
+  background: #272952; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ebf120; }
+  background: #1215c0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b276c6; }
+  background: #be7817; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #34adab; }
+  background: #12d72b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a557cd; }
+  background: #fef719; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6e9982; }
+  background: #0fc97c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #97cc85; }
+  background: #4b6a0a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2175ab; }
+  background: #3863ce; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #675e16; }
+  background: #6087fc; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #cd3314; }
+  background: #39ca41; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #467480; }
+  background: #960ed4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10503,8 +10503,12 @@ table .bold-heading {
   .legend-goes-here .tile-box {
     border: 4px solid #E3E3E3;
     box-sizing: border-box;
-    padding: 20px;
-    text-align: center; }
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 227px; }
     .legend-goes-here .tile-box h5 {
       font-size: 20px;
       color: #4c4c4c; }
@@ -10514,19 +10518,24 @@ table .bold-heading {
       font-size: 72px;
       color: #00C5D2;
       padding-top: 15px;
-      line-height: 141.5%; }
+      line-height: 145.5px; }
     .legend-goes-here .tile-box p {
       font-size: 16px;
       color: #9DA6AF;
       line-height: 23px; }
-  .legend-goes-here .list-chart-div ul li {
-    color: #4C4C4C;
-    display: grid;
-    font-size: 14px;
-    grid-template-columns: auto 1fr auto;
-    grid-gap: 15px;
-    align-items: center;
-    margin: 20px 0px; }
+  .legend-goes-here .list-chart-div {
+    position: relative;
+    overflow: auto; }
+    .legend-goes-here .list-chart-div ul {
+      height: 250px; }
+      .legend-goes-here .list-chart-div ul li {
+        color: #4C4C4C;
+        display: grid;
+        font-size: 14px;
+        grid-template-columns: auto 1fr auto;
+        grid-gap: 15px;
+        align-items: center;
+        margin: 20px 0px; }
 
 .legend-guide {
   display: grid;
@@ -10912,23 +10921,26 @@ table .bold-heading {
   height: 18px;
   display: inline-block; }
 
-.table-preview .table {
-  border: 0px solid #cccccc;
-  color: #7D7D7D;
-  font-size: 13px; }
-  .table-preview .table thead {
-    background: transparent; }
-    .table-preview .table thead th {
-      border-top: 0px solid #cccccc !important;
-      border-bottom: 1px solid #000 !important;
+.table-preview {
+  overflow: auto;
+  height: 250px; }
+  .table-preview .table {
+    border: 0px solid #cccccc;
+    color: #7D7D7D;
+    font-size: 13px; }
+    .table-preview .table thead {
+      background: transparent; }
+      .table-preview .table thead th {
+        border-top: 0px solid #cccccc !important;
+        border-bottom: 1px solid #000 !important;
+        padding: 10px 0px; }
+    .table-preview .table tbody th {
+      font-weight: bold;
+      color: #4C4C4C;
       padding: 10px 0px; }
-  .table-preview .table tbody th {
-    font-weight: bold;
-    color: #4C4C4C;
-    padding: 10px 0px; }
-  .table-preview .table tbody td {
-    padding: 10px 0px;
-    text-align: center; }
+    .table-preview .table tbody td {
+      padding: 10px 0px;
+      text-align: center; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
