--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3769,8 +3769,12 @@ width: 100%;
  .tile-box {
   border: 4px solid #E3E3E3;
   box-sizing: border-box;
-  padding: 20px;
   text-align: center;
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+min-height: 227px;
   h5 {
     font-size: 20px;
     color: #4c4c4c;
@@ -3781,7 +3785,7 @@ font-weight: 600;
 font-size: 72px;
 color: #00C5D2;
 padding-top: 15px;
-line-height: 141.5%;
+line-height: 145.5px;
   }
   p {
     font-size: 16px;
@@ -3791,7 +3795,10 @@ line-height: 141.5%;
  }
 
  .list-chart-div {
+  position: relative;
+  overflow: auto;
    ul {
+     height: 250px;
      li{
       color: #4C4C4C;
       display: grid;
@@ -4280,6 +4287,8 @@ line-height: 141.5%;
   display: inline-block;
 }
 .table-preview {
+  overflow: auto;
+height: 250px;
   .table {
     border: 0px solid #cccccc;
     color: #7D7D7D;
