--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #a3220f; }
+  background: #d3eefb; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b4afdf; }
+  background: #1c5874; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #60d31e; }
+  background: #09bdb8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0b7a94; }
+  background: #9537d4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7dd3d9; }
+  background: #6aa5cb; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #414b7b; }
+  background: #681c47; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c611df; }
+  background: #a79387; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #87c57c; }
+  background: #1ae37e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cdd21d; }
+  background: #3bee3a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e2f6f3; }
+  background: #8ab155; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f5591d; }
+  background: #cdb0cc; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #9a1eed; }
+  background: #5dfbbb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e58575; }
+  background: #2e4f4d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7eef4b; }
+  background: #e0528e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f940c5; }
+  background: #ace6bc; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f72efa; }
+  background: #3bd975; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #95ffb1; }
+  background: #31271f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d9624a; }
+  background: #2447a5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #576b10; }
+  background: #667d8e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #274cb4; }
+  background: #800878; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #23f651; }
+  background: #aeb744; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9037bb; }
+  background: #172f46; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a55d01; }
+  background: #9f8094; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #69185f; }
+  background: #29dedb; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e47255; }
+  background: #0d9088; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e6633b; }
+  background: #ff3a33; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #205844; }
+  background: #ba8dae; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1c31eb; }
+  background: #0130f7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #673a78; }
+  background: #358de7; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9c15cf; }
+  background: #4c69f2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #86f0d3; }
+  background: #391631; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #a7d876; }
+  background: #0e4cd4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #53aca8; }
+  background: #465557; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #bddbe8; }
+  background: #7b272e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8ad028; }
+  background: #713e19; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #625c17; }
+  background: #ead2f1; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #24b761; }
+  background: #9a3fe4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #56a223; }
+  background: #a1e970; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #349a65; }
+  background: #da52e2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #014f68; }
+  background: #d7c02f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9c8cd8; }
+  background: #17582f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0f2ee0; }
+  background: #0a4f51; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a52209; }
+  background: #415368; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #ee6146; }
+  background: #9bc174; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #396f9c; }
+  background: #7bc842; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #97e642; }
+  background: #fccab1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d9b63a; }
+  background: #abbd94; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #341bcf; }
+  background: #52fdb6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6a8989; }
+  background: #18b3f5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a608fa; }
+  background: #30bb77; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5ff440; }
+  background: #f67df2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #702350; }
+  background: #f220e1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f6bf42; }
+  background: #16203b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #11c561; }
+  background: #fcf58f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #ab2d78; }
+  background: #7a62ee; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #aed873; }
+  background: #730c17; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #39b6dd; }
+  background: #76d121; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d7c2bb; }
+  background: #a6bdad; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0403fb; }
+  background: #081b5d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d7613f; }
+  background: #11dee4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c19404; }
+  background: #36b7f5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b6febb; }
+  background: #3dfbbb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1ece58; }
+  background: #318c6f; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b6c978; }
+  background: #c4ccc7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b9e49f; }
+  background: #651b5e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #29cccd; }
+  background: #9f5113; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c09628; }
+  background: #d4c6f5; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3f92f6; }
+  background: #4a13df; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #72522a; }
+  background: #c48f4c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7246ec; }
+  background: #768915; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8dfb61; }
+  background: #8d8c28; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #11058a; }
+  background: #37ab78; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e532df; }
+  background: #dcfc44; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ea8291; }
+  background: #9b98a9; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b397ab; }
+  background: #48f6e7; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #10077e; }
+  background: #db7ea6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4d7c3e; }
+  background: #996e90; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #09424e; }
+  background: #828f90; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d311d5; }
+  background: #ccfb5f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #8c214a; }
+  background: #c130fb; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1a6cd6; }
+  background: #8f9d22; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b1718d; }
+  background: #a66cd0; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #603dbf; }
+  background: #8bdaf3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c7efe8; }
+  background: #9b93ab; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d0ea81; }
+  background: #6cf35d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a1ea9a; }
+  background: #5744f9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #03b488; }
+  background: #965b80; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9491e8; }
+  background: #a48812; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a24e52; }
+  background: #6e0b6a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #272952; }
+  background: #95e285; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1215c0; }
+  background: #2bd3c0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #be7817; }
+  background: #487462; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #12d72b; }
+  background: #362572; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #fef719; }
+  background: #891e6a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0fc97c; }
+  background: #38ec3a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4b6a0a; }
+  background: #94b44d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3863ce; }
+  background: #da4994; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6087fc; }
+  background: #b7eebe; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #39ca41; }
+  background: #165bc7; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #960ed4; }
+  background: #ef9341; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9220,6 +9220,9 @@ th {
 .dropdown-menu.show {
   display: block;
   z-index: 99999999; }
+
+.dropdown-menu .mCSB_scrollTools {
+  right: -4px !important; }
 
 .dashboard-top-section-query {
   display: flex;
@@ -10525,17 +10528,17 @@ table .bold-heading {
       line-height: 23px; }
   .legend-goes-here .list-chart-div {
     position: relative;
-    overflow: auto; }
-    .legend-goes-here .list-chart-div ul {
-      height: 250px; }
-      .legend-goes-here .list-chart-div ul li {
-        color: #4C4C4C;
-        display: grid;
-        font-size: 14px;
-        grid-template-columns: auto 1fr auto;
-        grid-gap: 15px;
-        align-items: center;
-        margin: 20px 0px; }
+    height: 250px; }
+    .legend-goes-here .list-chart-div .mCSB_scrollTools {
+      right: -14px !important; }
+    .legend-goes-here .list-chart-div ul li {
+      color: #4C4C4C;
+      display: grid;
+      font-size: 14px;
+      grid-template-columns: auto 1fr auto;
+      grid-gap: 15px;
+      align-items: center;
+      margin: 20px 0px; }
 
 .legend-guide {
   display: grid;
@@ -10924,6 +10927,8 @@ table .bold-heading {
 .table-preview {
   overflow: auto;
   height: 250px; }
+  .table-preview .mCSB_scrollTools {
+    right: -14px !important; }
   .table-preview .table {
     border: 0px solid #cccccc;
     color: #7D7D7D;
