--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d3eefb; }
+  background: #103282; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1c5874; }
+  background: #54b78c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #09bdb8; }
+  background: #e136bb; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9537d4; }
+  background: #103334; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6aa5cb; }
+  background: #108b22; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #681c47; }
+  background: #c43869; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a79387; }
+  background: #6bc823; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1ae37e; }
+  background: #31a25e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3bee3a; }
+  background: #72b457; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8ab155; }
+  background: #1af783; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #cdb0cc; }
+  background: #a5f72c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5dfbbb; }
+  background: #f4adf3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2e4f4d; }
+  background: #ffc38a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e0528e; }
+  background: #550ac5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ace6bc; }
+  background: #182839; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3bd975; }
+  background: #e05e4d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #31271f; }
+  background: #8a187a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2447a5; }
+  background: #956b76; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #667d8e; }
+  background: #869d3c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #800878; }
+  background: #f5e04e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #aeb744; }
+  background: #9cbdd3; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #172f46; }
+  background: #b74510; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9f8094; }
+  background: #221856; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #29dedb; }
+  background: #689331; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0d9088; }
+  background: #f05ed9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ff3a33; }
+  background: #9a0f73; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ba8dae; }
+  background: #8ce3a1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #0130f7; }
+  background: #1ca0b9; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #358de7; }
+  background: #a9ebe4; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4c69f2; }
+  background: #aa020a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #391631; }
+  background: #b3c705; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0e4cd4; }
+  background: #50ca17; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #465557; }
+  background: #db6a91; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #7b272e; }
+  background: #957ebe; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #713e19; }
+  background: #9046bb; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ead2f1; }
+  background: #493d5e; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9a3fe4; }
+  background: #8d06c5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #a1e970; }
+  background: #0fa389; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #da52e2; }
+  background: #9b3e8c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d7c02f; }
+  background: #c43d3f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #17582f; }
+  background: #0f8525; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0a4f51; }
+  background: #36cba2; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #415368; }
+  background: #8e68e1; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9bc174; }
+  background: #54d56b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7bc842; }
+  background: #a65737; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #fccab1; }
+  background: #5cec34; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #abbd94; }
+  background: #7c5d3d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #52fdb6; }
+  background: #e80eb7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #18b3f5; }
+  background: #af99e2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #30bb77; }
+  background: #5fe0b6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f67df2; }
+  background: #969c5c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f220e1; }
+  background: #5ece1c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #16203b; }
+  background: #20424e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #fcf58f; }
+  background: #1cd7e5; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7a62ee; }
+  background: #a6d618; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #730c17; }
+  background: #451585; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #76d121; }
+  background: #09d4af; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a6bdad; }
+  background: #96bf05; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #081b5d; }
+  background: #7da412; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #11dee4; }
+  background: #f251ce; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #36b7f5; }
+  background: #a0b2fe; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #3dfbbb; }
+  background: #5ec275; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #318c6f; }
+  background: #392465; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c4ccc7; }
+  background: #183a39; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #651b5e; }
+  background: #62018b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9f5113; }
+  background: #8eba5e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d4c6f5; }
+  background: #694c51; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4a13df; }
+  background: #13ab62; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c48f4c; }
+  background: #15a788; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #768915; }
+  background: #59aadc; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8d8c28; }
+  background: #e70dd9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #37ab78; }
+  background: #0ee204; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #dcfc44; }
+  background: #24522c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9b98a9; }
+  background: #528b77; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #48f6e7; }
+  background: #ad69a4; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #db7ea6; }
+  background: #7f1fc7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #996e90; }
+  background: #cfb8bb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #828f90; }
+  background: #39bd55; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ccfb5f; }
+  background: #d119ac; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c130fb; }
+  background: #896732; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8f9d22; }
+  background: #e66e53; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a66cd0; }
+  background: #70ec59; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #8bdaf3; }
+  background: #e96b1c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9b93ab; }
+  background: #33d661; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6cf35d; }
+  background: #05bfc4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5744f9; }
+  background: #820f69; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #965b80; }
+  background: #2a3abd; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a48812; }
+  background: #2d48d3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6e0b6a; }
+  background: #b92f93; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #95e285; }
+  background: #b5f354; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2bd3c0; }
+  background: #a236d4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #487462; }
+  background: #f6fa59; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #362572; }
+  background: #efd9bb; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #891e6a; }
+  background: #cfe325; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #38ec3a; }
+  background: #7e8d1d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #94b44d; }
+  background: #da9d18; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #da4994; }
+  background: #9ce26d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b7eebe; }
+  background: #d96dda; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #165bc7; }
+  background: #bcbe19; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ef9341; }
+  background: #c06870; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10594,7 +10594,9 @@ table .bold-heading {
   overflow: hidden;
   margin-top: 20px; }
 .widget-slider .carousel-inner {
-  height: calc(100vh - 12px) !important; }
+  height: calc(100vh - 120px) !important;
+  overflow-y: auto !important;
+  padding-bottom: 25px; }
 
 .dropdown-select-native select {
   color: #6c757d;
